--- a/.github/workflows/shiftleft.yml
+++ b/.github/workflows/shiftleft.yml
@@ -27,7 +27,10 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        env:
+          CHKP_CLOUDGUARD_ID: ${{ secrets.CHKP_CLOUDGUARD_ID }}
+          CHKP_CLOUDGUARD_SECCRET: ${{ secrets.CHKP_CLOUDGUARD_SECRET }}
+        run: $CHKP_CLOUDGUARD_ID
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
