--- a/.github/workflows/shiftleft.yml
+++ b/.github/workflows/shiftleft.yml
@@ -30,7 +30,7 @@ jobs:
         env:
           CHKP_CLOUDGUARD_ID: ${{ secrets.CHKP_CLOUDGUARD_ID }}
           CHKP_CLOUDGUARD_SECRET: ${{ secrets.CHKP_CLOUDGUARD_SECRET }}
-        run: $CHKP_CLOUDGUARD_ID
+        run: echo $CHKP_CLOUDGUARD_ID
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
